--- a/naya project/Views/ujwal/index.cshtml
+++ b/naya project/Views/ujwal/index.cshtml
@@ -9,7 +9,7 @@
         }
     </style>
 }
-
+<a href="@Url.Action("create")">content</a>
 <h2>Employee List</h2>
 <table class="table" border="1"  style="background-color:aquamarine; color:brown; border-block-color:chocolate">
     <tr>
